[project]
name = "neuquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.41.0; sys_platform != 'darwin'",
    "datasets>=3.6.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
]

[dependency-groups]
dev = [
    "black",
]

[tool.black]
line-length = 88
target-version = ['py311']
